fix by wrong z-index in project info of each slider on homepage

--- a/components/sass/block/_home-prj-info.scss
+++ b/components/sass/block/_home-prj-info.scss
@@ -14,7 +14,7 @@
         transform: translateY(25%);
     }
     &.prj-cresus {
-      visibility: visible;
+      z-index: 1;
       .prj_desc {
         p {
           color: #aa804e;
@@ -35,7 +35,6 @@
       }
     }
     &.prj-durance {
-      visibility: hidden;
       .prj_desc {
         p {
           color: #f6c709;
@@ -56,7 +55,6 @@
       }
     }
     &.prj-bys {
-      visibility: hidden;
       .prj_desc {
         p {
           color: #282a3f;
@@ -77,7 +75,6 @@
       }
     }
     &.prj-club75 {
-      visibility: hidden;
       .prj_desc {
         p {
           color: #d1ff00;
@@ -98,7 +95,6 @@
       }
     }
     &.prj-renault {
-      visibility: hidden;
       .prj_desc {
         p {
           color: #f64847;
@@ -119,7 +115,6 @@
       }
     }
     .prj_desc {
-      overflow: hidden;
       padding-left: 30px;
       margin-top: 0;
       font-size: $size-p-s;
